# ngstructure

./: .gitignore  main.py  pyproject.toml
pkg/: data_module.py  embedding.py  evaluator.py  generator.py  objective.py  scheduler.py  test_generator.py  tokenizer.py  transformer.py  utils.py
