[project]
name = "ngstructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepchem>=2.8.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "lightning>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tensorboard>=2.14.0",
    "scikit-learn>=1.3.0",
]
