[project]
name = "ngstructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepchem>=2.8.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "wandb",
    "tqdm",
    "jax[cuda]>=0.6.2",
    "equinox>=0.13.0",
    "jaxtyping>=0.3.2",
    "jmp>=0.0.4",
    "optax>=0.2.5",
]


[tool.ruff.lint]
ignore = ["F722", "F821", "E731"]
